# SpaceFighters

./: CMakeLists.txt  README.md
include/: Entity.hpp  Game.hpp  Item.hpp  Math.hpp  Mouse.hpp
src/: CMakeLists.txt  entity.cpp  game.cpp  item.cpp  main.cpp
